feat: gestao de turmas, visibilidade publica/privada de atividades e criacao de usuarios ADM/ALU